# RayTracerChallengeCpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: standalone.yml
documentation/: CMakeLists.txt
include/raytracerchallenge/: Constants.h  raytracerchallenge.h
include/raytracerchallenge/base/: BoundingBox.h  Camera.h  Canvas.h  Color.h  Computations.h  Intersections.h  Light.h  Material.h  Matrix.h  Ray.h  Tuple.h  World.h
include/raytracerchallenge/io/: ObjParser.h
include/raytracerchallenge/parallel/: Parallel.h
include/raytracerchallenge/patterns/: CheckersPattern.h  GradientPattern.h  Pattern.h  RingPattern.h  StripePattern.h
include/raytracerchallenge/shapes/: CSG.h  Cone.h  Cube.h  Cylinder.h  GlassSphere.h  Group.h  Plane.h  Shape.h  SmoothTriangle.h  Sphere.h  Triangle.h
source/: raytracerchallenge.cpp
source/raytracerchallenge/base/: BoundingBox.cpp  Camera.cpp  Canvas.cpp  Color.cpp  Computations.cpp  Intersections.cpp  Light.cpp  Matrix.cpp  Ray.cpp  Tuple.cpp  World.cpp
source/raytracerchallenge/io/: ObjParser.cpp
source/raytracerchallenge/patterns/: CheckersPattern.cpp  GradientPattern.cpp  RingPattern.cpp  StripePattern.cpp
source/raytracerchallenge/shapes/: CSG.cpp  Cone.cpp  Cube.cpp  Cylinder.cpp  Group.cpp  Plane.cpp  SmoothTriangle.cpp  Sphere.cpp  Triangle.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: raytracerchallenge.cpp
test/source/raytracerchallenge/: Benchmark.cpp
test/source/raytracerchallenge/base/: BoundingBox.cpp  Camera.cpp  Canvas.cpp  Color.cpp  Computations.cpp  Intersections.cpp  Light.cpp  Matrix.cpp  Ray.cpp  Tuple.cpp  World.cpp
test/source/raytracerchallenge/io/: ObjParser.cpp
test/source/raytracerchallenge/patterns/: CheckersPattern.cpp  GradientPattern.cpp  RingPattern.cpp  StripePattern.cpp
test/source/raytracerchallenge/shapes/: CSG.cpp  Cone.cpp  Cube.cpp  Cylinder.cpp  Group.cpp  Plane.cpp  SmoothTriangle.cpp  Sphere.cpp  Triangle.cpp
